--- a/examples/Appium.csproj
+++ b/examples/Appium.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="ReportUnit" Version="1.5.0-beta1"/>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
     <PackageReference Include="Castle.Core" Version="5.0.0"/>
+    <PackageReference Include="NUnit.Allure" Version="1.2.1.1"/>
     <Content Include="..\test_settings.json">
       <Link>%(RecursiveDir)%(Filename)%(Extension)</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
